--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
  
 	
-	<link rel="stylesheet" href="http://www.atlasestateagents.co.uk/css/tether.min.css">
-<script src="http://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
+	<link rel="stylesheet" href="https://www.atlasestateagents.co.uk/css/tether.min.css">
+<script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
