--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<meta name="author" content="Joey Hedges">
 		
 		
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/css/tether.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="styles/main.css">
 
 		
