--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 					  <a href="#!/forms.html">Forms</a>
 					  <ul class="nav-dropdown">
 						<li>
-						  <a href="#!/forms/NASM-CPT_Goal_Setting_Worksheet.pdf">NASM-CPT_Goal_Setting_Worksheet</a>
+						  <a href="#!/forms/NASM-CPT_Goal_Setting_Worksheet.pdf">Goal Setting</a>
 						</li>
 						<li>
-						  <a href="#!/forms/NASM-CPT_Nutrition_Log_Worksheet.pdf">NASM-CPT_Nutrition_Log_Worksheet</a>
+						  <a href="#!/forms/NASM-CPT_Nutrition_Log_Worksheet.pdf">Nutrition Log</a>
 						</li>
 						<li>
-						  <a href="#!/forms/NASM-CPT_Client_Readiness_for_Exercise_Worksheet.pdf">NASM-CPT_Client_Readiness_for_Exercise_Worksheet</a>
+						  <a href="#!/forms/NASM-CPT_Client_Readiness_for_Exercise_Worksheet.pdf">Client Readiness</a>
 						</li>
 						
 					  </ul>
