--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					  <a href="#!/forms.html">Forms</a>
 					  <ul class="nav-dropdown">
 						<li>
-						  <a href=""https://fitnessphoenix.github.io/forms/NASM-CPT_Goal_Setting_Worksheet.pdf">Goal Setting</a>
+						  <a href="https://fitnessphoenix.github.io/forms/NASM-CPT_Goal_Setting_Worksheet.pdf">Goal Setting</a>
 						</li>
 						<li>
 						  <a href="https://fitnessphoenix.github.io/forms/NASM-CPT_Nutrition_Log_Worksheet.pdf">Nutrition Log</a>
