--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Fitness Phoenix - Fitness Coaching, Personal Training and Nutrition">
 		<meta name="author" content="Joey Hedges">
-		<meta name="keywords" content="dacula, Dacula, fitness, workout, boot, camp,boot camp, health, yoga, fit, fitbody, body, 9round, golds, nutrition, diet, Atlanta, Lawrenceville, Athens, Georgia, Roswell, Alpharetta">
+		<meta name="keywords" content="dacula, Dacula, fitness, workout, boot, camp,boot camp, health, yoga, fit, fitbody, body, 9round, golds, nutrition, diet, Atlanta, Lawrenceville, Athens, Georgia, Roswell, Alpharetta, Paddle, board, paddleboard, Phoenix">
 		
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/css/tether.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
@@ -50,6 +50,9 @@
 					  </ul> -->
 					</li>
 					<li>
+					  <a href="#!/paddle.html">Paddle Boarding</a>
+					</li>
+					<li>
 					  <a href="#!/videos.html">Videos</a>
 					</li>
 		
@@ -85,15 +88,10 @@
 				</nav>
 			  </div>
 			</section>
-
-			
-
-
 		</div>
 		<div class="row">
 			<div class="col-md-12">
 				<div ng-view></div>
-			</div>
 			</div>
 	  </div>
 
@@ -144,7 +142,7 @@
 		<script src="scripts/controllers/services.js"></script>
 		<script src="scripts/controllers/videos.js"></script>
 		<script src="scripts/controllers/testimonials.js"></script>
-		
+		<script src="scripts/controllers/paddle.js"></script>		
 		
 		<script>  
 		(function($) { // Begin jQuery
