--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 					  <a href="#!/paddle.html">Paddle Boarding</a>
 					</li>
 					<li>
+					  <a href="#!/nutrition.html">Nutrition</a>
+					</li>
+					<li>
 					  <a href="#!/videos.html">Videos</a>
 					</li>
 		
@@ -143,7 +146,7 @@
 		<script src="scripts/controllers/videos.js"></script>
 		<script src="scripts/controllers/testimonials.js"></script>
 		<script src="scripts/controllers/paddle.js"></script>		
-		
+		<script src="scripts/controllers/nutrition.js"></script>			
 		<script>  
 		(function($) { // Begin jQuery
   $(function() { // DOM ready
