--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 				  <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
 				  <ul class="nav-list">
 					<li>
+					  <a href="#!">Home</a>
+					</li>
+					<li>
 					  <a href="#!/services.html">Services</a>
 <!-- 					  <ul class="nav-dropdown">
 						<li>
