--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<section class="navigation">
 			  <div class="nav-container">
 				<div class="brand">
-				  <a href="#!"><img src="images/fitness_phoenix_logo_banner.jpg" alt="Fitness Phoenix"></a>
+				  <a href="#!"><img src="images/fitness_phoenix_logo_banner.jpg" alt="Fitness Phoenix">Fitness Phoenix</a>
 				</div>
 				<nav>
 				  <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
