--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Fitness Phoenix - Fitness Coaching, Personal Training and Nutrition">
 		<meta name="author" content="Joey Hedges">
-		<meta name="keywords" content="dacula, Dacula, fitness, workout, boot, camp,boot camp, health, yoga, fit, fitbody, body, 9round, golds, nutrition, diet, Atlanta, Lawrenceville, Athens, Georgia, Roswell, Alpharetta, Paddle, board, paddleboard, Phoenix">
+		<meta name="keywords" content="Dacula, fitness, workout, boot, camp,bootcamp, health, yoga, fit, fitbody, body, 9round, golds, nutrition, diet, Atlanta, Lawrenceville, Athens, Georgia, Roswell, Alpharetta, Paddle, board, sup, paddleboard, Phoenix">
 		
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/css/tether.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
