--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" style="font-size: 100%; overflow-y: scroll; -webkit-tap-highlight-color: rgba(0,0,0,0); -ms-text-size-adjust: 100%;  -webkit-text-size-adjust: none;">
 	<head>
 		<meta charset="utf-8">
+		<meta name="google-site-verification" content="sQnKEgKuq7EwBQ-n0Tu6SNZSaalsQHXq28_eG8nD24w" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Fitness Phoenix - Fitness Coaching, Personal Training and Nutrition">
 		<meta name="author" content="Joey Hedges">
