--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en" style="font-size: 100%; overflow-y: scroll; -webkit-tap-highlight-color: rgba(0,0,0,0); -ms-text-size-adjust: 100%;  -webkit-text-size-adjust: none;">
 	<head>
 		<meta charset="utf-8">
-		<meta name="google-site-verification" content="sQnKEgKuq7EwBQ-n0Tu6SNZSaalsQHXq28_eG8nD24w" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Fitness Phoenix - Fitness Coaching, Personal Training and Nutrition">
+		<meta name="description" content="Fitness Phoenix - Fitness Coaching, Personal Trainer, Paddle boarding, and Nutrition Services in the Dacula, Gwinnett and Greater NE Metro Atlanta area">
 		<meta name="author" content="Joey Hedges">
-		<meta name="keywords" content="Dacula, fitness, workout, boot, camp,bootcamp, health, yoga, fit, fitbody, body, 9round, golds, nutrition, diet, Atlanta, Lawrenceville, Athens, Georgia, Roswell, Alpharetta, Paddle, board, sup, paddleboard, Phoenix">
+		<meta name="title" content="Personal Trainer, Nutrition, and Paddle Board in Dacula, Gwinnett">
+		<meta name="keywords" content="Dacula, fitness, workout, boot, camp,bootcamp, health, yoga, fit, nutrition, diet, Atlanta, Lawrenceville, Athens, Georgia, Roswell, Alpharetta, Paddle, board, paddle board, sup, paddleboard, Phoenix">
 		
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="styles/main.css">
 
 		
-		 <title>Joey Hedges Fitness</title>
+		 <title>Fitness Phoenix - Providing Personal Training and Nutrition in Dacula, Gwinnett and the NE Greater Metro Atlanta area</title>
 		 <base href="/">
 		 
 	</head>
