--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Fitness Phoenix - Fitness Coaching, Personal Trainer, Paddle boarding, and Nutrition Services in the Dacula, Gwinnett and Greater NE Metro Atlanta area">
+		<meta name="description" content="Fitness Phoenix is Joey Hedges.  Dacula Personal Trainer providing: Fitness Coaching, Personal Trainer, Paddle boarding, and Nutrition Services in the Dacula, Gwinnett and Greater NE Metro Atlanta area">
 		<meta name="author" content="Joey Hedges">
 		<meta name="title" content="Personal Trainer, Nutrition, and Paddle Board in Dacula, Gwinnett">
 		<meta name="keywords" content="Dacula, fitness, workout, boot, camp,bootcamp, health, yoga, fit, nutrition, diet, Atlanta, Lawrenceville, Athens, Georgia, Roswell, Alpharetta, Paddle, board, paddle board, sup, paddleboard, Phoenix">
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/main.css">
 
 		
-		 <title>Fitness Phoenix - Providing Personal Training and Nutrition in Dacula, Gwinnett and the NE Greater Metro Atlanta area</title>
+		 <title><Fitness Phoenix - Providing Personal Training and Nutrition in Dacula, Gwinnett and the NE Greater Metro Atlanta area</title>
 		 <base href="/">
 		 
 	</head>
@@ -26,7 +26,7 @@
 			<section class="navigation">
 			  <div class="nav-container">
 				<div class="brand">
-				  <a href="#!"><img src="images/fitness_phoenix_logo_banner.jpg" alt="Fitness Phoenix">Fitness Phoenix</a>
+				  <a href="#!"><img src="images/fitness_phoenix_logo_banner.jpg" alt="Fitness Phoenix"><h1>Fitness Phoenix</h1></a>
 				</div>
 				<nav>
 				  <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -34,7 +34,7 @@
 
 					<li>
 					  <a href="#!/services.html">Services</a>
-<!-- 					  <ul class="nav-dropdown">
+						<!-- <ul class="nav-dropdown">
 						<li>
 						  <a href="#!">Web Design</a>
 						</li>
