--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<section class="navigation">
 			  <div class="nav-container">
 				<div class="brand">
-				  <a href="#!"><img src="images/fitness_phoenix_logo_banner.jpg" alt="Fitness Phoenix"><h1>Fitness Phoenix</h1></a>
+				  <h1><a href="#!"><img src="images/fitness_phoenix_logo_banner.jpg" alt="Fitness Phoenix">Fitness Phoenix</a></h1>
 				</div>
 				<nav>
 				  <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
