--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/main.css">
 
 		
-		 <title><Fitness Phoenix - Providing Personal Training and Nutrition in Dacula, Gwinnett and the NE Greater Metro Atlanta area</title>
+		 <title>Fitness Phoenix - Providing Personal Training and Nutrition in Dacula, Gwinnett and the NE Greater Metro Atlanta area</title>
 		 <base href="/">
 		 
 	</head>
