--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				  <ul class="nav-list">
 
 					<li>
-					  <a href="#!/services.html">Personal Trainer </br> Services</a>
+					  <a href="#!/services.html">Personal Trainer</a>
 						<!-- <ul class="nav-dropdown">
 						<li>
 						  <a href="#!">Web Design</a>
