--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Fitness Phoenix is Joey Hedges.  Dacula Personal Trainer providing: Fitness Coaching, Personal Trainer, Paddle boarding, and Nutrition Services in the Dacula, Gwinnett and Greater NE Metro Atlanta area">
+		<meta name="description" content="Dacula Personal Trainer providing: Fitness Coaching, Paddle board, and Nutrition Services in the Dacula, Gwinnett and Greater NE Metro Atlanta area">
 		<meta name="author" content="Joey Hedges">
-		<meta name="title" content="Personal Trainer, Nutrition, and Paddle Board in Dacula, Gwinnett">
+		<meta name="title" content="Personal Trainer and Nutrition Dacula, Gwinnett">
 		<meta name="keywords" content="Dacula, fitness, workout, boot, camp,bootcamp, health, yoga, fit, nutrition, diet, Atlanta, Lawrenceville, Athens, Georgia, Roswell, Alpharetta, Paddle, board, paddle board, sup, paddleboard, Phoenix">
 		
 
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/main.css">
 
 		
-		 <title>Fitness Phoenix - Providing Personal Training and Nutrition in Dacula, Gwinnett and the NE Greater Metro Atlanta area</title>
+		 <title>Fitness Phoenix - Personal Trainer and Nutrition Dacula, Gwinnett,NE Greater Metro Atlanta</title>
 		 <base href="/">
 		 
 	</head>
