--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/main.css">
 
 		
-		 <title>Fitness Phoenix - Personal Trainer and Nutrition Dacula, Gwinnett,NE Greater Metro Atlanta</title>
+		 <title>Fitness Phoenix - Personal Trainer and Nutrition Dacula, Gwinnett</title>
 		 <base href="/">
 		 
 	</head>
