--- a/index.html
+++ b/index.html
@@ -31,26 +31,14 @@
 				<nav>
 				  <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
 				  <ul class="nav-list">
-
 					<li>
-					  <a href="#!/services.html">Personal Trainer</a>
-						<!-- <ul class="nav-dropdown">
-						<li>
-						  <a href="#!">Web Design</a>
-						</li>
-						<li>
-						  <a href="#!">Web Development</a>
-						</li>
-						<li>
-						  <a href="#!">Graphic Design</a>
-						</li>
-					  </ul> -->
+					  <a href="#!/services.html"><h2>Personal Trainer</h2></a>
 					</li>
 					<li>
-					  <a href="#!/paddle.html">Paddle Boarding</a>
+					  <a href="#!/paddle.html"><h2>Paddle Boarding</h2></a>
 					</li>
 					<li>
-					  <a href="#!/nutrition.html">Nutrition</a>
+					  <a href="#!/nutrition.html"><h2>Nutrition</h2></a>
 					</li>
 					<li>
 						 <a href="#!/about.html">About</a>
