--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="font-size: 100%; overflow-y: scroll; -webkit-tap-highlight-color: rgba(0,0,0,0); -ms-text-size-adjust: 100%;  -webkit-text-size-adjust: none;">
+<html lang="en" id="html"">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,16 @@
 		
 		 <title>Fitness Phoenix - Personal Trainer and Nutrition Dacula, Gwinnett</title>
 		 <base href="/">
-		 
+		 <!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119575552-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-119575552-1');
+</script>
+
 	</head>
 
   <body ng-app="joeyhedgesfitAppApp" ng-controller="MainCtrl">
