--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						 <a href="#!/about.html">About</a>
 					</li>
 					<li>
-						<a href="#!/contact.html">Contact</a>
+						<h2><a href="#!/contact.html">Contact</a></h2>
 					</li>
 					<li>
 					  <a href="#!/more.html">More</a>
