--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
 				  <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
 				  <ul class="nav-list">
 					<li>
-					  <a href="#!/services.html"><h2>Personal Trainer</h2></a>
+					  <h2><a href="#!/services.html">Personal Trainer</a></h2>
 					</li>
 					<li>
-					  <a href="#!/paddle.html"><h2>Paddle Boarding</h2></a>
+					  <h2><a href="#!/paddle.html">Paddle Boarding</a></h2>
 					</li>
 					<li>
-					  <a href="#!/nutrition.html"><h2>Nutrition</h2></a>
+					  <h2><a href="#!/nutrition.html">Nutrition</a></h2>
 					</li>
 					<li>
-						 <a href="#!/about.html">About</a>
+						<h2><a href="#!/about.html">About</a></h2>
 					</li>
 					<li>
 						<h2><a href="#!/contact.html">Contact</a></h2>
