--- a/index.html
+++ b/index.html
@@ -23,7 +23,30 @@
 			gtag('js', new Date());
 
 			gtag('config', 'UA-119575552-1');
-</script>
+		</script>
+		<script type='application/ld+json'> 
+			{
+			  "@context": "http://www.schema.org",
+			  "@type": "HealthClub",
+			  "name": "Fitness Phoenix LLC",
+			  "url": "www.fitnessphoenix.net",
+			  "logo": "https://fitnessphoenix.github.io/images/fitness_phoenix_logo_orig.jpg",
+			  "image": "0001000002126028",
+			  "description": "Personal Training, Nutrition Counseling and Nutrition Guidance, as well as Paddle Board instruction in the Dacula, Gwinnett area.  ",
+			  "address": {
+				"@type": "PostalAddress",
+				"streetAddress": "716 Bridle Creek Way",
+				"addressLocality": "AUBURN",
+				"addressRegion": "GA",
+				"postalCode": "30011",
+				"addressCountry": "United States"
+			  },
+			  "contactPoint": {
+				"@type": "ContactPoint",
+				"telephone": "7705988666"
+			  }
+			}
+		</script>
 
 	</head>
 
