--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="styles/main.css">
+		<link rel="stylesheet" type="text/css" href="styles/main_min.css">
 
 		
 		 <title>Fitness Phoenix - Personal Trainer and Nutrition Dacula, Gwinnett</title>
