--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html"">
+<html lang="en" id="html">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,8 +9,8 @@
 		<meta name="keywords" content="Dacula, fitness, workout, boot, camp,bootcamp, health, yoga, fit, nutrition, diet, Atlanta, Lawrenceville, Athens, Georgia, Roswell, Alpharetta, Paddle, board, paddle board, sup, paddleboard, Phoenix">
 		
 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="styles/main.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css"/>
+		<link rel="stylesheet" type="text/css" href="styles/main.css"/>
 
 		
 		 <title>Fitness Phoenix - Personal Trainer and Nutrition Dacula, Gwinnett</title>
@@ -67,10 +67,10 @@
 					  <h2><a href="#!/services.html">Personal Trainer</a></h2>
 					</li>
 					<li>
-					  <h2><a href="#!/paddle.html">Paddle Boarding</a></h2>
+					  <h2><a href="#!/paddle.html">SUP Paddle Board</a></h2>	
 					</li>
 					<li>
-					  <h2><a href="#!/nutrition.html">Nutrition</a></h2>
+					  <h2><a href="#!/nutrition.html">Nutrition Guidance</a></h2>
 					</li>
 					<li>
 						<h2><a href="#!/about.html">About</a></h2>
@@ -100,30 +100,10 @@
 			</div>
 	  </div>
 
-
-
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-<!--     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script> -->
-	
-	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
- <!--     <script src="bower_components/angular/angular.js"></script> -->
- 	  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.js">
+   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.js"></script>
  
- <!--     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script> -->
- 
- <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"> -->
- <!-- <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-  -->
-  
-
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.js"></script>
- 
-	
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.6/angular-animate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.6/angular-aria.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.6/angular-cookies.min.js"></script>
@@ -148,30 +128,28 @@
 		<script src="scripts/controllers/nutrition.js"></script>			
 		<script>  
 		(function($) { // Begin jQuery
-  $(function() { // DOM ready
-    // If a link has a dropdown, add sub menu toggle.
-    $('nav ul li a:not(:only-child)').click(function(e) {
-      $(this).siblings('.nav-dropdown').toggle();
-      // Close one dropdown when selecting another
-      $('.nav-dropdown').not($(this).siblings()).hide();
-      e.stopPropagation();
-    });
-    // Clicking away from dropdown will remove the dropdown class
-    $('html').click(function() {
-      $('.nav-dropdown').hide();
-    });
-    // Toggle open and close nav styles on click
-    $('#nav-toggle').click(function() {
-      $('nav ul').slideToggle();
-    });
-    // Hamburger to X toggle
-    $('#nav-toggle').on('click', function() {
-      this.classList.toggle('active');
-    });
-  }); // end DOM ready
-})(jQuery); // end jQuery
-
-
-</script>
+		  $(function() { // DOM ready
+			// If a link has a dropdown, add sub menu toggle.
+			$('nav ul li a:not(:only-child)').click(function(e) {
+			  $(this).siblings('.nav-dropdown').toggle();
+			  // Close one dropdown when selecting another
+			  $('.nav-dropdown').not($(this).siblings()).hide();
+			  e.stopPropagation();
+			});
+			// Clicking away from dropdown will remove the dropdown class
+			$('html').click(function() {
+			  $('.nav-dropdown').hide();
+			});
+			// Toggle open and close nav styles on click
+			$('#nav-toggle').click(function() {
+			  $('nav ul').slideToggle();
+			});
+			// Hamburger to X toggle
+			$('#nav-toggle').on('click', function() {
+			  this.classList.toggle('active');
+			});
+		  }); // end DOM ready
+		})(jQuery); // end jQuery
+		</script>
 	</body>
 </html>
